--- a/web/viewer.css
+++ b/web/viewer.css
@@ -989,6 +989,10 @@ html[dir='rtl'] .findbar * {
   float: right;
 }
 
+#scaleSelectContainer {
+  margin-top: 7px;
+}
+
 html[dir='ltr'] .splitToolbarButton {
   margin: 3px 2px 4px 0;
   display: inline-block;
