Update pdf view

--- a/web/viewer.css
+++ b/web/viewer.css
@@ -441,6 +441,10 @@ select {
   display: none !important;
 }
 
+#viewerContainer.presentationMode {
+  overflow: hidden !important;
+}
+
 #viewerContainer.pdfPresentationMode:-ms-fullscreen {
   top: 0px !important;
   overflow: hidden !important;
